# captoken

./: README.md  pyproject.toml
captoken/: newsgroups.py  preprocess.py
notebooks/: GPT2 Tokenizer.ipynb  Intro.ipynb  Newsgroups (Caps).ipynb  Newsgroups.ipynb  Train Tokenizer.ipynb
notebooks/tokenizers/: basetoken.spm  capstoken.spm
