[tool.poetry]
name = "captoken"
version = "0.1.0"
description = ""
authors = ["Irhum Shafkat <13271155+irhum@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2023.10.3"
scikit-learn = "^1.3.2"
sentencepiece = "^0.1.99"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
seaborn = "^0.13.0"
datasets = "^2.16.1"
binpacking = "^1.5.2"
transformers = "^4.36.2"
black = {extras = ["jupyter"], version = "^23.12.1"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
